# GameEngine-or-game-idk-yet

./: .gitignore  CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
src/: asset-path-resolver.cpp  asset-path-resolver.h  main.cpp  opengl-debug.cpp  opengl-debug.h  shader-builder.cpp  shader-builder.h  shader-program.cpp  shader-program.h  shader.cpp  shader.h  texture-builder.cpp  texture-builder.h  vao-builder.cpp  vao-builder.h  vao.cpp  vao.h
